# dud

./: .gitignore  NOTICE  README.md  justfile  meson.build
src/: allocator.c  allocator.h  ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h
tests/: test.h  test_allocator.c  test_lexer.c  test_parser.c
